--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "json-server": "json-server --watch db.json",
-    "server": "node server.js",
+    "server": "nodemon server.js",
     "start": "npm-run-all --parallel json-server server"
   },
   "author": "Alejandro Saenz",
@@ -14,10 +14,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "json-server": "^0.15.0"
+    "json-server": "^0.15.0",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "nodemon": "^1.19.3",
     "npm-run-all": "^4.1.5"
   }
 }
